// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sitemap Node API tests custom query runs 1`] = `
Array [
  Object {
    "changefreq": "weekly",
    "priority": 0.8,
    "url": "http://dummy.url/page-1",
  },
]
`;

exports[`sitemap Node API tests default settings work properly 1`] = `
Array [
  Object {
    "changefreq": "daily",
    "priority": 0.7,
    "url": "http://dummy.url/page-1",
  },
  Object {
    "changefreq": "daily",
    "priority": 0.7,
    "url": "http://dummy.url/page-2",
  },
]
`;
